--- a/A태그실습예제2/index.html
+++ b/A태그실습예제2/index.html
@@ -11,7 +11,31 @@
   <title>A태그실습예제2</title>
 </head>
 <body>
-  <div class="wrapper">
+  <class="wrapper">
+    
+    <br><br><br><br><br><br><br>
+    <a href="#go">
+      <img src="./images/google.png" alt="구글">
+    </a>
+    <div class="newpage">
+    Google 이미지를 눌렀을 때 <strong>구글로 이동할 수 있는<br>
+    링크가 있는 html 페이지로 이동 &#58; 새 창 열기
+      </strong>
+    </div>
+    <br><br><br><br><br><br><br>
+
+    <br><br><br><br><br><br><br>
+    <div class="newpage">
+      <h1 id="go">구글로 이동!</h1>
+    </div>
+    <a href="https://www.google.com" target="_blank">
+      <img src="./images/google.png" alt="구글">
+    </a>
+    <div class="newpage">
+    <strong>구글 이미지를 클릭하면 <ins>구글로 이동합니다.</ins></strong>
+    </div>
+    <br><br><br><br><br><br><br>
+
   </div>
 </body>
 </html>
