--- a/A태그실습예제2/index2-1.html
+++ b/A태그실습예제2/index2-1.html
@@ -14,11 +14,11 @@
   <div class="wrapper">
 
     <div class="google">
-      <h1>구글로 이동!</h1>
+      <h1 class="white-bgc">구글로 이동!</h1>
       <a href="https://www.google.com/">
         <img src="./images/google.png" alt="Google logo">
       </a>
-      <p class="txt-bold">구글 이미지를 클릭하면 <span class="txt-under">구글로 이동합니다.</span></p>
+      <p class="txt-bold white-bgc">구글 이미지를 클릭하면 <span class="txt-under">구글로 이동합니다.</span></p>
     </div>
 
   </div>
