--- a/20230517Boxlayout/float/index.html
+++ b/20230517Boxlayout/float/index.html
@@ -13,8 +13,11 @@
 <body>
   <div class="wrapper">
 
-    <div class="float">
-      
+    <div class="layout">
+      <div class="header box1">Header</div>
+      <div class="left-box box2">Main Left</div>
+      <div class="right-box box2">Main Right</div>
+      <div class="footer box1">Footer</div>
     </div>
 
   </div>
