--- a/20230518FlexEX1/index.html
+++ b/20230518FlexEX1/index.html
@@ -13,7 +13,47 @@
 <body>
   <div class="wrapper">
 
-    
+    <div class="layout">
+
+      <!-- header 내부에 반드시 h1~6 태그 1개 이상 포함할 것. -->
+      <header>
+        <nav> <!-- GNB(글로벌 네비게이션 바) -->
+
+          <h1 class="logo">
+            <a href="./index.html">
+              <img src="./Images/applelogo.png" alt="applelogo">
+            </a>
+          </h1>
+
+          <ul class="gnb-list">
+            <li class="gnb-item"><a href="./menu1.html">menu1</a></li>
+            <li class="gnb-item"><a href="./menu2.html">menu2</a></li>
+            <li class="gnb-item"><a href="./menu3.html">menu3</a></li>
+          </ul>
+
+        </nav>
+      </header>
+
+
+      <div class="bgc">
+
+        <h2>Lorem ipsum dolor sit.</h2>
+
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi provident repellendus laboriosam odio. Itaque voluptatibus amet illum nesciunt qui. Dicta voluptas labore accusamus facilis dolore nulla animi natus fugiat atque!
+
+        <button>버튼</button>
+
+      </div>
+
+      표
+
+      <div class="footer">
+
+        Contact
+
+      </div>
+
+    </div>
 
   </div>
 </body>
