--- a/20230518FlexEX1/index.html
+++ b/20230518FlexEX1/index.html
@@ -34,24 +34,24 @@
         </nav>
       </header>
 
+      <!-- <main> 태그 내에 페이지 주 콘텐츠 내용이 들어간다. -->
+      <!-- 문서 내에서 <main> 태그는 한 번만 사용한다. -->
+      <main>
+        <!-- main 태그 안에서 영역별 section 태그로 구분해주는 게 좋다. -->
+        <section class="background">
+          <div class="back-txt">
+            <h2 class="back-title">Lorem ipsum dolor sit amet.</h2>
+            <p class="back-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Ducimus quibusdam inventore, ut voluptatum soluta, 
+              enim quia sapiente, est necessitatibus architecto minima 
+              quam aspernatur adipisci temporibus cupiditate rem! Natus, 
+              voluptate necessitatibus?</p>
+            <button class="back-btn">버튼</button>
+          </div>
+        </section>
+      </main>
 
-      <div class="bgc">
 
-        <h2>Lorem ipsum dolor sit.</h2>
-
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi provident repellendus laboriosam odio. Itaque voluptatibus amet illum nesciunt qui. Dicta voluptas labore accusamus facilis dolore nulla animi natus fugiat atque!
-
-        <button>버튼</button>
-
-      </div>
-
-      표
-
-      <div class="footer">
-
-        Contact
-
-      </div>
 
     </div>
 
