--- a/20230518FlexEX1/index.html
+++ b/20230518FlexEX1/index.html
@@ -38,6 +38,7 @@
       <!-- 문서 내에서 <main> 태그는 한 번만 사용한다. -->
       <main>
         <!-- main 태그 안에서 영역별 section 태그로 구분해주는 게 좋다. -->
+
         <section class="background">
           <div class="back-txt">
             <h2 class="back-title">Lorem ipsum dolor sit amet.</h2>
@@ -46,12 +47,20 @@
               enim quia sapiente, est necessitatibus architecto minima 
               quam aspernatur adipisci temporibus cupiditate rem! Natus, 
               voluptate necessitatibus?</p>
-            <button class="back-btn">버튼</button>
+            <!-- javascript 이벤트, 동적인 요소 / button 내 onclick="alert('')" -->
+            <button class="back-btn" onclick="alert('Hello, World!')">버튼</button>
           </div>
         </section>
-      </main>
 
-      
+        <section class="first-box">
+          <div>
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Expedita alias deserunt impedit voluptates ut quae?</p>
+          </div>
+        </section>
+
+      </main>
 
     </div>
 
