--- a/20230518FlexEX1/index.html
+++ b/20230518FlexEX1/index.html
@@ -60,6 +60,40 @@
           </div>
         </section>
 
+        <section class="Post-box-list">
+
+          <div class="post-box-item">
+            <h2>
+              Lorem ipsum dolor sit amet.
+            </h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Accusantium quos maxime quidem facilis unde velit!
+            </p>
+          </div>
+
+          <div class="post-box-item">
+            <h2>
+              Lorem ipsum dolor sit amet.
+            </h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Accusantium quos maxime quidem facilis unde velit!
+            </p>
+          </div>
+
+          <div class="post-box-item">
+            <h2>
+              Lorem ipsum dolor sit amet.
+            </h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Accusantium quos maxime quidem facilis unde velit!
+            </p>
+          </div>
+ 
+        </section>
+
       </main>
 
     </div>
