💄 Section .post-box-list styling apply

--- a/20230518FlexEX1/index.html
+++ b/20230518FlexEX1/index.html
@@ -60,8 +60,7 @@
           </div>
         </section>
 
-        <section class="Post-box-list">
-
+        <section class="post-box-list">
           <div class="post-box-item">
             <h2>
               Lorem ipsum dolor sit amet.
@@ -91,7 +90,6 @@
               Accusantium quos maxime quidem facilis unde velit!
             </p>
           </div>
- 
         </section>
 
       </main>
