💄 footer self appy

--- a/20230518FlexEX1/index.html
+++ b/20230518FlexEX1/index.html
@@ -94,6 +94,21 @@
 
       </main>
 
+      <footer>
+      <nav>
+
+        <h1 class="contact">
+            Contact
+        </h1>
+
+        <ul class="gnb-list2">
+          <li class="gnb-item2"><a href="mailto:email@gmail.com">메일</a></li>
+          <li class="gnb-item2"><a href="tel:010-1234-1234">전화</a></li>
+          <li class="gnb-item2"><a href="https://www.youtube.com">유튜브</a></li>
+        </ul>
+
+      </nav>
+      </footer>
     </div>
 
   </div>
