--- a/20230519회원가입(table.input)/index.html
+++ b/20230519회원가입(table.input)/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="회원가입 페이지">
   <meta name="keywords" content="회원가입">
   <meta name="author" content="Kai">
+  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
   <title>회원가입</title>
 </head>
 <body>
@@ -64,7 +65,7 @@
         <!-- name 속성은 서버 전송 시 필요한 값 -->
         <td><input required id="id" type="text" name="userID">
           <!-- button type : 1. button 2. reset 3. submit  -->
-          <button type="button">아이디 중복체크</button></td>
+          <button type="button">중복체크</button></td>
       </tr>
       <tr>
         <td><label for="pw">비밀번호</label></td>
@@ -76,18 +77,100 @@
         <td><input required id="name" type="text" name="userName"></td>
       </tr>
       <tr>
-        <td><label for="email"></label>이메일</td>
+        <td><label for="email">이메일</label></td>
         <!-- 카멜표기법 : 낙타 등 혹처럼 소문자 다음 대문자 표기 -->
         <!-- 자바스크립트에서 변수명 작성 시 사용하는 표기법 -->
         <!--  CSS에서는 하이픈(-) 주로 사용 -->
         <td><input required id="email" type="email" name="userEmail"></td>
       </tr>
       <tr>
-        <td><label for="nationality">국적</label></td>
-        <td><input id="nationality"></td>
+        <td><label for="nation">국적</label></td>
+        <!-- name 속성 : 폼이 제출된 후 폼 데이터 참조용 -->
+        <td><select name="nation" id="nation">
+          <!-- option tag group -->
+          <optgroup label="Asia">
+            <!-- option value : 해당 옵션 선택 시 서버 제출 값 명시 -->
+            <!-- 태그 사이에 있는 텍스트는 브라우저에 표시될 내용이고
+                value 값이 서버로 제출되는 값 -->
+            <!-- value 값이 입력되지 않았을 경우, 
+                option 태그 사이에 있는 텍스트가 서버로 전송된다. -->
+            <!-- selected : 초기에 미리 선택 항목 설정 -->
+            <!-- disabled : 비활성화 -->
+            <option value="kor" selected>대한민국</option>
+            <option value="pdk" disabled>북한</option>
+            <option value="jap">일본</option>
+            <option value="chi">중국</option>
+            <option value="vie">베트남</option>
+          </optgroup>
+          <optgroup label="Europe">
+            <option value="ger">독일</option>
+            <option value="fra">프랑스</option>
+            <option value="eng">영국</option>
+            <option value="ita">이탈리아</option>
+            <option value="spa">스페인</option>
+          </optgroup>
+          <optgroup label="America">
+            <option value="usa">미국</option>
+            <option value="can">캐나다</option>
+            <option value="mex">멕시코</option>
+            <option value="bra">브라질</option>
+            <option value="arh">아르헨티나</option>
+          </optgroup>
+          <optgroup label="Africa">
+            <option value=""></option>
+          </optgroup>
+          <optgroup label="Oceania/Pacific">
+            <option value=""></option>
+          </optgroup>
+        </select></td>
       </tr>
       <tr>
-        <td><label for=""></label></td>
+        <td><label>생년월일</label></td>
+        <td>
+          <span><select name="year" id="year"></select> 년</span>
+          <span><select name="month" id="month"></select> 월</span>
+          <span><select name="day" id="day"></select> 일</span>
+        </td>
+        <!-- jQuery는 웹사이트에서 자바스크립트를 쉽게 사용할 수 있도록
+            도와주는 오픈 소스 자바스크립트 라이브러리 -->
+        <!-- 프레임워크 / 라이브러리 차이점 : 프로그램 흐름 제어 권한 -->
+        <!-- 자바스크립트 프레임워크 : Angular, Vue(1)(마소) -->
+        <!-- 프레임워크는 만든 사람이 짜놓은 틀 안에서
+          수동적으로 동작하기 때문에 제어 흐름이 프레임워크에 있다. -->
+        <!-- 자바스크립트 라이브러리 : React(메타) -->
+        <!-- 라이브러리는 사용자에게 제어 흐름, 개발자가 능동적 사용 가능 -->
+        <script>
+          // var, let, const
+          // Javascript의 변수명은 카멜표기법(낙타)
+          // 프로그래밍에서 = 표시는 오른쪽 값을 왼쪽 변수에 대입하겠다는 의미
+          // new Date() = 한국 표준시 
+          let nowYear = new Date(); // 한국 표준시
+          nowYear = nowYear.getFullYear(); // 변수가 갖고 있는 값에서 년도만 대입
+          console.log(nowYear) // 순서 중요
+          // console 실행문
+          // Javascript에서 반복적인 코드를 작성할 때는 '반복문'을 사용한다.
+          // 반복문 for(원하는 조건) for ~동안 
+          // i = 1900에서 시작,
+          // i 가 nowYear(2023) 보다 작거나 같을 때까지 1씩 증가시켜라
+          for( i = 1900; i <= nowYear; i++ ) {
+            // $ : jQuery 선택자
+            // document.getElementById("year")
+            $("#year").append("<option>" + i + "</option>")
+            // append는 추가. 변수와 문자열을 플러스로 이어줌.
+          }
+
+          for( i = 1; i <= 12; i++ ) {
+            $("#month").append("<option>" + i + "</option>")
+          }
+
+          for( i = 1; i <= 31; i++ ) {
+            $("#day").append("<option>" + i + "</option>")
+          }
+        </script>
+        <!-- CSS는 Style 안에, 자바스크립트는 script 안에 작성해야 인식 -->
+      </tr>
+      <tr>
+        <td></td>
       </tr>
     </table>
 
