--- a/20230518FlexEX1/index.html
+++ b/20230518FlexEX1/index.html
@@ -8,6 +8,15 @@
   <meta name="description" content="Flex를 이용해서 layout 잡기 연습">
   <meta name="keywords" content="Flex, HTML, 실습">
   <meta name="author" content="Kai">
+  <!-- favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#ffc40d">
+  <meta name="theme-color" content="#ffffff">
+  <!-- favicon -->
   <title>Flex 실습예제1</title>
 </head>
 <body>
