--- a/20230519회원가입(table.input)/index.html
+++ b/20230519회원가입(table.input)/index.html
@@ -19,6 +19,11 @@
   <meta name="msapplication-TileColor" content="#2d89ef">
   <meta name="theme-color" content="#ffffff">
   <!-- favicon -->
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap" rel="stylesheet">
+  <!-- google fonts -->
   <title>회원가입</title>
 </head>
 <body>
