--- a/20230515Mypage/index.html
+++ b/20230515Mypage/index.html
@@ -17,6 +17,11 @@
   <meta name="msapplication-TileColor" content="#ffc40d">
   <meta name="theme-color" content="#ffffff">
   <!-- favicon -->
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
+  <!-- google fonts -->
   <title>My Profile page</title>
 </head>
 <body>
