--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <meta name="description" content="자기소개">
   <meta name="keywords" content="프로필">
   <meta name="X">
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&display=swap" rel="stylesheet">
   <title>My Profile</title>
 </head>
 <body>
@@ -45,7 +53,7 @@
       </td>
     </table>
 
-    <br><br><br><p><h2>안녕하세요, 잘 부탁드립니다.</h2></p><br>
+    <br><br><br><p><h2 class="hello">안녕하세요, 잘 부탁드립니다.</h2></p><br>
     <div class="table" style="background-image:URL(./images/forms.webp)">
       <br><h3 class="write">마지막까지 파이팅!</h3>
       <br><img src="./images/birds.webp" alt="새" height="260">
