--- a/20230523CSSposition/index.html
+++ b/20230523CSSposition/index.html
@@ -28,6 +28,7 @@
   <div class="wrapper">
   
     <h1>CSS Position 연습</h1>
+    <br><br><br><br><br><br>
     
     <!-- Position : HTML 문서 상에서 요소가 배치되는 방식을 결정한다. -->
     <!-- top, bottom, left, right 이용, 원하는 위치로 좌표 이동 (2,3,4) -->
@@ -58,7 +59,16 @@
       <div class="box3">position:sticky</div>
     </div>
 
-    <br><br><br><br><br><br><br><br><br><br><br><br>
+
+    <div class="cat-box">
+      <div class="cat">
+        
+      </div>
+    </div>
+
+    <div class="scroll">
+
+    </div>
 
   </div>
 </body>
