--- a/20230524Position1/index.html
+++ b/20230524Position1/index.html
@@ -30,7 +30,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
-  
+
   <title>Position 실습1</title>
 </head>
 <body>
@@ -44,10 +44,10 @@
           </a>
         </h1>
         <ul class="menu-con">
-          <li class="menu"><a href="">menu1</a></li>
-          <li class="menu"><a href="">menu2</a></li>
-          <li class="menu"><a href="">menu3</a></li>
-          <li class="menu"><a href="">menu4</a></li>
+          <li class="menu"><a href="./menu1.html">menu1</a></li>
+          <li class="menu"><a href="./menu2.html">menu2</a></li>
+          <li class="menu"><a href="./menu3.html">menu3</a></li>
+          <li class="menu"><a href="./menu4.html">menu4</a></li>
         </ul>
       </nav>
     </header>
@@ -64,11 +64,18 @@
         </div>
       </section>
 
-      <section class="first-box">
+      <section class="side-bar">
         <div>
-          <h2>Lorem ipsum dolor sit amet.</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Expedita alias deserunt impedit voluptates ut quae?</p>
+          <div><a href="./menu1.html">sidemenu1</a></div>
+          <div><a href="./menu2.html">sidemenu2</a></div>
+          <div><a href="./menu3.html">sidemenu3</a></div>
+          <div><a href="./menu4.html">sidemenu4</a></div>
+        </div>
+      </section>
+
+      <section class="arrow">
+        <div>
+          <i class="fa-solid fa-circle-arrow-up fa-2x"></i>
         </div>
       </section>
 
@@ -78,7 +85,8 @@
             Lorem ipsum dolor sit amet.
           </h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+            Lorem ipsum dolor sit amet consectetur<br>
             Accusantium quos maxime quidem facilis unde velit!
           </p>
         </div>
@@ -88,7 +96,8 @@
             Lorem ipsum dolor sit amet.
           </h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+            Lorem ipsum dolor sit amet consectetur<br>
             Accusantium quos maxime quidem facilis unde velit!
           </p>
         </div>
@@ -98,10 +107,15 @@
             Lorem ipsum dolor sit amet.
           </h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+            Lorem ipsum dolor sit amet consectetur<br>
             Accusantium quos maxime quidem facilis unde velit!
           </p>
         </div>
+      </section>
+
+      <section class="beebox">
+        <div class="bee"></div>
       </section>
 
     </main>
@@ -113,9 +127,9 @@
         </h1>
 
         <ul class="gnb-list2">
-          <li class="gnb-item2"><a href="mailto:email@gmail.com">메일</a></li>
-          <li class="gnb-item2"><a href="tel:010-1234-1234">전화</a></li>
-          <li class="gnb-item2"><a href="https://www.youtube.com">유튜브</a></li>
+          <li class="gnb-item2"><a href="mailto:email@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
+          <li class="gnb-item2"><a href="tel:010-1234-1234"><i class="fa-solid fa-square-phone"></i></a></li>
+          <li class="gnb-item2"><a href="https://www.youtube.com"><i class="fa-brands fa-youtube"></i></a></li>
         </ul>
       </nav>
     </footer>
