--- a/20230524Position1/menu1.html
+++ b/20230524Position1/menu1.html
@@ -65,9 +65,9 @@
         </h1>
 
         <ul class="gnb-list2">
-          <li class="gnb-item2"><a href="mailto:email@gmail.com">메일</a></li>
-          <li class="gnb-item2"><a href="tel:010-1234-1234">전화</a></li>
-          <li class="gnb-item2"><a href="https://www.youtube.com">유튜브</a></li>
+          <li class="gnb-item2"><a href="mailto:email@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
+          <li class="gnb-item2"><a href="tel:010-1234-1234"><i class="fa-solid fa-square-phone"></i></a></li>
+          <li class="gnb-item2"><a href="https://www.youtube.com"><i class="fa-brands fa-youtube"></i></a></li>
         </ul>
       </nav>
     </footer>
