--- a/20230524Position1/TCindex.html
+++ b/20230524Position1/TCindex.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./CSS/TCstyle.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="Position 실습1">
+  <meta name="keywords" content="html, css, Position">
   <meta name="author" content="Kai">
 
   <!-- Favicon -->
@@ -17,9 +17,6 @@
   <link rel="mask-icon" href="./TCFavicon/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#00aba9">
   <meta name="theme-color" content="#ffffff">
-
-  <!-- javascript jQuery -->
-  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
 
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/6105f934ac.js" crossorigin="anonymous"></script>
@@ -32,18 +29,32 @@
   <title>Position 실습1</title>
 </head>
 <body>
-  <div class="wrapper">
+  <div class="wrapper" id="top">
     <header>
+      <nav>
 
+        <h1 class="logo">
+          <a href="./TCindex.html">
+            <img src="./imges/스누피2.png" alt="logo">
+          </a>
+        </h1>
+
+        <h2 class="visually-hidden">메뉴</h2>
+        <ul class="gnb-list">
+          <li class="gnb-item"><a href="./TCmenu1.html">menu1</a></li>
+          <li class="gnb-item"><a href="./TCmenu2.html">menu2</a></li>
+          <li class="gnb-item"><a href="./TCmenu3.html">menu3</a></li>
+          <li class="gnb-item"><a href="./TCmenu4.html">menu4</a></li>
+        </ul>
+
+      </nav>
     </header>
-
-
     
     <main>
 
+
+
     </main>
-
-
 
     <footer>
 
