💄 background section styling complete

--- a/20230524Position1/TCindex.html
+++ b/20230524Position1/TCindex.html
@@ -52,6 +52,16 @@
     
     <main>
 
+      <section class="background">
+        <h3 class="main-tittle">SNOOPY GARDEN</h3>
+        <p class="main-content">Lorem ipsum dolor sit,
+          amet consectetur adipisicing elit. <br>
+          Natus rerum debitis veritatis unde alias soluta libero, <br>
+          iste et quae nostrum pariatur. Assumenda eius culpa earum, <br>
+          a cupiditate provident voluptate quia.</p>
+        <button class="main-btn" type="button">더보기</button>
+      </section>
+
 
 
     </main>
