💄 background fixed styling complete

--- a/20230524Position1/TCindex.html
+++ b/20230524Position1/TCindex.html
@@ -86,6 +86,12 @@
         </div>
       </section>
 
+      <section class="fixed-back">
+        <div class="fixed-back-img">
+          
+        </div>
+      </section>
+
     </main>
 
     <footer>
