--- a/20230524Position1/TCindex.html
+++ b/20230524Position1/TCindex.html
@@ -88,13 +88,22 @@
 
       <section class="fixed-back">
         <div class="fixed-back-img">
-          
+
         </div>
       </section>
 
     </main>
 
     <footer>
+
+      <div class="global-footer">
+        <h3>Contact</h3>
+        <ul class="icon-list">
+          <li class="icon-item"><a href="mailto:google@google.com"><i class="fa-solid fa-envelope"></i></a></li>
+          <li class="icon-item"><a href="tel:011-123-1234"><i class="fa-solid fa-square-phone"></i></a></li>
+          <li class="icon-item"><a href="https://www.youtube.com"><i class="fa-brands fa-youtube"></i></a></li>
+        </ul>
+      </div>
 
     </footer>
   </div>
