💄 Side-bar-menu complete

--- a/20230524Position1/TCindex.html
+++ b/20230524Position1/TCindex.html
@@ -111,6 +111,15 @@
       <a href="#top"><i class="fa-solid fa-circle-arrow-up"></i></a>
     </div>
 
+    <aside class="side-menu">
+      <ul class="side-menu-list">
+        <li class="side-menu-item"><a href="./TCmenu1.html">menu1</a></li>
+        <li class="side-menu-item"><a href="./TCmenu2.html">menu2</a></li>
+        <li class="side-menu-item"><a href="./TCmenu3.html">menu3</a></li>
+        <li class="side-menu-item"><a href="./TCmenu4.html">menu4</a></li>
+      </ul>
+    </aside>
+
   </div>
 </body>
 </html>
