--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="자기소개">
   <meta name="keywords" content="프로필">
-  <meta name="X">
+  <meta name="Kai">
   <!-- favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
@@ -36,7 +36,7 @@
         <img class="man" src="./images/us0.webp" alt="man">
       </td>
       <td class="margin-name">
-        <span><b>이름</b> &colon; X </span>
+        <span><b>이름</b> &colon; Kai </span>
         <br>
         <span><b>취미1</b> &colon; 유튜브 </span>
         <br>
