💄 반응형 D(L) Styling conmplete

--- a/20230526반응형/index.html
+++ b/20230526반응형/index.html
@@ -12,7 +12,16 @@
 </head>
 <body>
   <div class="wrapper">
-    
+    <header>HEADER</header>
+    <main>
+      <section class="back-img"></section>
+      <section class="box-list">
+        <div>Section1</div>
+        <div>Section2</div>
+        <div>Section3</div>
+      </section>
+    </main>
+    <footer>FOOTER</footer>
   </div>
 </body>
 </html>
