💄 T 반응형 적용

--- a/20230530PositionEx1반응형/TCindex.html
+++ b/20230530PositionEx1반응형/TCindex.html
@@ -57,7 +57,7 @@
         <p class="main-content">Lorem ipsum dolor sit,
           amet consectetur adipisicing elit. <br>
           Natus rerum debitis veritatis unde alias soluta libero, <br>
-          iste et quae nostrum pariatur. Assumenda eius culpa earum, <br>
+          iste et quae nostrum pariatur. Assumenda eius culpa earum,
           a cupiditate provident voluptate quia.</p>
         <button class="main-btn" type="button">더보기</button>
       </section>
@@ -87,12 +87,8 @@
       </section>
 
       <section class="fixed-back">
-        <table>
-          <tr>
-            <td><div class="fixed-back-img"></div></td>
-            <td><div class="fixed-back-img2"></div></td>
-          </tr>
-        </table>
+        <div class="fixed-back-img"></div>
+        <div class="fixed-back-img2"></div>
       </section>
 
     </main>
