--- a/20230531CSSAnimation/index.html
+++ b/20230531CSSAnimation/index.html
@@ -12,7 +12,13 @@
 </head>
 <body>
   <div class="wrapper">
-    .
+    <div class="box"></div>
+
+    <div class="line-active">
+      <span class="line"></span>
+      <h2>Line Animation</h2>
+      <span class="line"></span>
+    </div>
   </div>
 </body>
 </html>
