--- a/20230531CSSAnimation/index2.html
+++ b/20230531CSSAnimation/index2.html
@@ -4,15 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="CSS Animation">
+  <meta name="description" content="Img Animation">
   <meta name="keywords" content="CSS, Animation">
   <meta name="author" content="Kai">
   <link rel="stylesheet" href="./style2.css">
-  <title>CSS Animation</title>
+  <title>Img Animation</title>
 </head>
 <body>
   <div class="wrapper">
-
+    <div class="img-box">
+      <img src="./images/man.png" alt="man">
+      <img src="./images/elements.png" alt="elements">
+    </div>
   </div>
 </body>
 </html>
