--- a/20230531CSSAnimation/index2.html
+++ b/20230531CSSAnimation/index2.html
@@ -14,7 +14,7 @@
   <div class="wrapper">
     <div class="img-box">
       <img src="./images/man.png" alt="man">
-      <img src="./images/elements.png" alt="elements">
+      <img class="elements" src="./images/elements.png" alt="elements">
     </div>
   </div>
 </body>
