💄 header styling complete

--- a/20230601맥도날드/index.html
+++ b/20230601맥도날드/index.html
@@ -20,9 +20,13 @@
 
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/6105f934ac.js" crossorigin="anonymous"></script>
-  
 
-  <title>맥도날드</title>
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
+
+  <title>맥도날드 반응형</title>
 </head>
 <body>
   <div class="wrapper">
@@ -34,10 +38,12 @@
           </a>
         </h1>
         <h2 class="visually-hidden">메뉴</h2>
-        <ul class="gnb-list">menu1</ul>
-        <ul class="gnb-list">menu2</ul>
-        <ul class="gnb-list">menu3</ul>
-        <ul class="gnb-list"><i class="fa-solid fa-magnifying-glass"></i></ul>
+        <ul class="gnb-list">
+          <li class="gnb-item"><a href="./menu1">menu1</a></li>
+          <li class="gnb-item"><a href="./menu2">menu2</a></li>
+          <li class="gnb-item"><a href="./menu3">menu3</a></li>
+          <li class="gnb-item"><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
+        </ul>
       </nav>
     </header>
 
