💄 main-bar-bottom styling

--- a/20230601맥도날드/index.html
+++ b/20230601맥도날드/index.html
@@ -69,9 +69,9 @@
 
       <section class="main-bar-bottom">
         <ul class="main-bar-list2">
-          <li class="main-bar-item2"><a href=""><img src="./images/side1.png" alt="logo">품질 이야기</a></li>
-          <li class="main-bar-item2"><a href=""><img src="./images/side2.jpeg" alt="McDelivery">McDelivery</a></li>
-          <li class="main-bar-item2"><a href="#header"><img src="./images/top.jpeg" alt="top">TOP</a></li>
+          <li class="main-bar-item2"><a href=""><div><img src="./images/side1.png" alt="logo"></div>품질 이야기</a></li>
+          <li class="main-bar-item2"><a href=""><div><img src="./images/side2.jpeg" alt="McDelivery"></div>McDelivery</a></li>
+          <li class="main-bar-item2"><a href="#header"><div><img src="./images/top.jpeg" alt="top"></div>TOP</a></li>
         </ul>
       </section>
     </main>
