📝 lnb mark-up complete

--- a/20230601맥도날드/TCindex.html
+++ b/20230601맥도날드/TCindex.html
@@ -29,7 +29,7 @@
   <title>맥도날드 반응형</title>
 </head>
 <body>
-  <!-- 기존 작성 코드 수정 도중 오타 발견, 삭제했던 id 추가 -->
+  <!-- 기존 작성 코드 오류 발견 및 수정, 삭제했던 id 추가 -->
   <div class="wrapper" id="top">
     <header>
       <nav>
@@ -49,15 +49,19 @@
       </nav>
     </header>
 
-    <p>
-      <section class="main-bar-top">
-        <ul class="main-bar-list">
-          <li class="main-bar-item"><a href="./menu.html">Menu</a></li>
-          <li class="main-bar-item"><a href="./store.html">Store</a></li>
-          <li class="main-bar-item"><a href="./new.html">What's New</a></li>
-          <li class="main-bar-item"><a href="./story.html">Story</a></li>
-        </ul>
-      </section>
+    <div class="lnb-wrapper">
+      <ul class="lnb-list">
+        <li class="lnb-item"><a href="./menu.html">Menu</a></li>
+        <li class="lnb-item"><a href="./store.html">Store</a></li>
+        <li class="lnb-item"><a href="./new.html">What's New</a></li>
+        <li class="lnb-item"><a href="./story.html">Story</a></li>
+      </ul>
+    </div>
+
+
+    <!-- 기존 작성 코드 오류 발견 및 수정 -->
+    <main>
+
 
 
       <section class="back"><h2 class="visually-hidden">background image</h2></section>
