📝 .mac-story mark-up

--- a/20230601맥도날드/TCindex.html
+++ b/20230601맥도날드/TCindex.html
@@ -161,17 +161,29 @@
           </ul>
         </section>
   
-  
-  
-        <section class="main-bar-bottom">
-          <ul class="main-bar-list2">
-            <li class="main-bar-item2"><a href=""><div><img src="./images/side1.png" alt="logo"></div>품질 이야기</a></li>
-            <li class="main-bar-item2"><a href=""><div><img src="./images/side2.jpeg" alt="McDelivery"></div>McDelivery</a></li>
-            <li class="main-bar-item2"><a href="#top"><div><img src="./images/top.jpeg" alt="top"></div>TOP</a></li>
+        <!-- 전체 코드 변경, 이미지/텍스트 -->
+        <section class="mac-story-box">
+          <ul class="mac-story-list">
+            <li class="mac-story-item">
+              <a href="">
+                <img src="./images/side1.png" alt="품질이야기">
+                <p>품질 이야기</p>
+              </a>
+            </li>
+            <li class="mac-story-item">
+              <a href="">
+                <img src="./images/side2.jpeg" alt="McDelivery">
+                <p>McDelivery</p>
+              </a>
+            </li>
+            <li class="mac-story-item">
+              <a href="#top">
+                <img src="./images/top.jpeg" alt="top">
+                <p>TOP</p>
+              </a>
+            </li>
           </ul>
         </section>
-
-
 
       </div>
     </main>
