--- a/20230601맥도날드/TCindex.html
+++ b/20230601맥도날드/TCindex.html
@@ -49,6 +49,8 @@
       </nav>
     </header>
 
+
+
     <div class="lnb-wrapper">
       <ul class="lnb-list">
         <li class="lnb-item"><a href="./menu.html">Menu</a></li>
@@ -57,6 +59,8 @@
         <li class="lnb-item"><a href="./story.html">Story</a></li>
       </ul>
     </div>
+
+
 
     <!-- 기존 작성 코드 오류 발견 및 수정, 전체 코드 변경 -->
     <main>
@@ -184,38 +188,36 @@
             </li>
           </ul>
         </section>
-
       </div>
     </main>
 
-    <footer>
-      <nav>
-        <h1 class="info1">
-          <ul class="gnb-list2">
-            <li class="gnb-item2"><a href="">개인정보 처리방침</a></li>
-            <li class="gnb-item2"><a href="">위치정보 이용약관</a></li>
-            <li class="gnb-item2"><a href="">사이트맵</a></li>
-            <li class="gnb-item2"><a href="">임차문의</a></li>
-          </ul>
-          <ul class="gnb-list3">
-            <li class="gnb-item3">한국맥도날드(유)</li>
-            <li class="gnb-item3">대표이사: KAI</li>
-            <li class="gnb-item3">사업자등록번호: 123-456-7890</li>
-            <li class="gnb-item3">전화주문: 1234-1234</li>
-          </ul>
-        </h1>
 
-        <h3 class="info3">
-          <div class="gnb-list4">
-            <div><a href="https://www.instagram.com"><i class="fa-brands fa-instagram" style="color:red;"></i></a></div>
-            <div><a href="https://ko-kr.facebook.com"><i class="fa-brands fa-facebook" style="color:red;"></i></a></div>
-            <div><a href="https://www.youtube.com"><i class="fa-brands fa-youtube" style="color:red;"></i></a></div>
-            <div><a href=""><i class="fa-regular fa-handshake" style="color:red;"></i></a></div>
-          </div>
-        </h3>
-      </nav>
+    <!-- 전체 코드 변경 -->
+    <footer>
+      <div class="global-footer">
+        <ul class="mac-link list">
+          <li class="mac-link-item"><a href="">개인정보 처리방침</a></li>
+          <li class="mac-link-item"><a href="">위치정보 이용약관</a></li>
+          <li class="mac-link-item"><a href="">사이트맵</a></li>
+          <li class="mac-link-item"><a href="">임차문의</a></li>
+        </ul>
+        <ul class="mac-info-list">
+          <li>한국맥도날드(유)</li>
+          <li>대표이사: KAI</li>
+          <li>사업자등록번호: 123-456-7890</li>
+          <li>전화주문: 1234-1234</li>
+        </ul>
+        <ul class="mac-icon-list">
+          <li><a href="https://www.instagram.com"><i class="fa-brands fa-instagram" style="color:red;"></i></a></li>
+          <li><a href="https://ko-kr.facebook.com"><i class="fa-brands fa-facebook" style="color:red;"></i></a></li>
+          <li><a href="https://www.youtube.com"><i class="fa-brands fa-youtube" style="color:red;"></i></a></li>
+          <li><a href=""><i class="fa-regular fa-handshake" style="color:red;"></i></a></li>
+        </ul>
+      </div>
     </footer>
 
+
+    
   </div>
 </body>
 </html>
