--- a/20230601맥도날드/TCindex.html
+++ b/20230601맥도날드/TCindex.html
@@ -67,8 +67,8 @@
       <div class="main-wrapper">
         <section class="background"><h2 class="visually-hidden">background image</h2></section>
         <section class="food-box"><h2 class="visually-hidden">food-box-section</h2>
-          <ul class="post-box-list">
-            <li class="post-box-item">
+          <ul class="food-box-list">
+            <li class="food-box-item">
               <a href="">
                 <div class="img-wrap">
                   <img src="./images/food.jpeg" alt="food-img1">
@@ -78,7 +78,7 @@
                 </div>
               </a>
             </li>
-            <li class="post-box-item">
+            <li class="food-box-item">
               <a href="">
                 <div class="img-wrap">
                   <img src="./images/food.jpeg" alt="food-img1">
@@ -88,7 +88,7 @@
                 </div>
               </a>
             </li>            
-            <li class="post-box-item">
+            <li class="food-box-item">
               <a href="">
                 <div class="img-wrap">
                   <img src="./images/food.jpeg" alt="food-img1">
@@ -99,8 +99,8 @@
               </a>
             </li>
           </ul>
-          <ul class="post-box-list">
-            <li class="post-box-item">
+          <ul class="food-box-list">
+            <li class="food-box-item">
               <a href="">
                 <div class="img-wrap">
                   <img src="./images/food2.jpeg" alt="food-img2">
@@ -110,7 +110,7 @@
                 </div>
               </a>
             </li>
-            <li class="post-box-item">
+            <li class="food-box-item">
               <a href="">
                 <div class="img-wrap">
                   <img src="./images/food2.jpeg" alt="food-img2">
@@ -120,7 +120,7 @@
                 </div>
               </a>
             </li>            
-            <li class="post-box-item">
+            <li class="food-box-item">
               <a href="">
                 <div class="img-wrap">
                   <img src="./images/food2.jpeg" alt="food-img2">
@@ -131,8 +131,8 @@
               </a>
             </li>
           </ul>
-          <ul class="post-box-list">
-            <li class="post-box-item">
+          <ul class="food-box-list">
+            <li class="food-box-item">
               <a href="">
                 <div class="img-wrap">
                   <img src="./images/food3.jpeg" alt="food-img3">
@@ -142,7 +142,7 @@
                 </div>
               </a>
             </li>
-            <li class="post-box-item">
+            <li class="food-box-item">
               <a href="">
                 <div class="img-wrap">
                   <img src="./images/food3.jpeg" alt="food-img3">
@@ -152,7 +152,7 @@
                 </div>
               </a>
             </li>            
-            <li class="post-box-item">
+            <li class="food-box-item">
               <a href="">
                 <div class="img-wrap">
                   <img src="./images/food3.jpeg" alt="food-img3">
