💄 .mac-story-box styling

--- a/20230601맥도날드/TCindex.html
+++ b/20230601맥도날드/TCindex.html
@@ -194,7 +194,7 @@
 
     <!-- 전체 코드 변경 -->
     <footer>
-      <div class="global-footer">
+      <div class="mac-story-box">
         <ul class="mac-link list">
           <li class="mac-link-item"><a href="">개인정보 처리방침</a></li>
           <li class="mac-link-item"><a href="">위치정보 이용약관</a></li>
