--- a/20230601맥도날드/TCindex.html
+++ b/20230601맥도날드/TCindex.html
@@ -194,8 +194,8 @@
 
     <!-- 전체 코드 변경 -->
     <footer>
-      <div class="mac-story-box">
-        <ul class="mac-link list">
+      <div class="global-footer">
+        <ul class="mac-link-list">
           <li class="mac-link-item"><a href="">개인정보 처리방침</a></li>
           <li class="mac-link-item"><a href="">위치정보 이용약관</a></li>
           <li class="mac-link-item"><a href="">사이트맵</a></li>
