📝 사이드바 추가

--- a/20230601맥도날드/index.html
+++ b/20230601맥도날드/index.html
@@ -119,6 +119,23 @@
       </nav>
     </footer>
 
+
+        <!-- TC에서 복붙, 햄버거 bar의 추가 클래스 포함 사이드바 -->
+        <aside class="sidebar sm-only">
+          <nav class="sidebar-nav">
+            <h2 class="visually-hidden">사이드바 메뉴</h2>
+            <ul class="side-menu-list">
+              <li class="side-menu-item"><a href="">menu1</a></li>
+              <li class="side-menu-item"><a href="">menu2</a></li>
+              <li class="side-menu-item"><a href="">menu3</a></li>
+              <li class="side-menu-item"><a href="">menu4</a></li>
+            </ul>
+          </nav>
+        </aside>
+    
+        <div class="overlay"></div>
+
+
   </div>
 </body>
 </html>
