--- a/20230601맥도날드/TCindex.html
+++ b/20230601맥도날드/TCindex.html
@@ -234,5 +234,9 @@
     <div class="overlay"></div>
 
   </div>
+
+  <!-- 자바스크립트 연결 -->
+  <script src="./JS/sidebar.js"></script>
+  <!-- 사용성 문제로 다른 요소들 먼저 뜨고 동적인 요소들이 연결되도록 순서를 마지막 -->
 </body>
 </html>
