📝 alert mark-up

--- a/Javascript/20230608Alertbox/index.html
+++ b/Javascript/20230608Alertbox/index.html
@@ -12,7 +12,11 @@
 </head>
 <body>
   <div class="wrapper">
-    
+    <div class="alert">
+      Alert
+      <button id="x" type="button">X</button>
+    </div>
+    <button id="btn" type="button">Open</button>
   </div>
   <script src="./script.js"></script>
 </body>
