--- a/Javascript/20230608Alertbox/index.html
+++ b/Javascript/20230608Alertbox/index.html
@@ -11,12 +11,15 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <!-- UI를 변경할 때 
+    1. HTML, CSS로 디자인 (필요 시 화면 상에서 숨김)
+    2. 필요할 때 Javascript로 숨긴 요소를 보여달라고 코드 작성 -->
   <div class="wrapper">
-    <div class="alert">
-      Alert
-      <button id="x" type="button">X</button>
+    <div id="alert" class="alert-box">
+      <p>Alert</p>
+      <button id="close-btn" type="button">X</button>
     </div>
-    <button id="btn" type="button">Open</button>
+    <button id="open-btn" type="button">Open</button>
   </div>
   <script src="./script.js"></script>
 </body>
