--- a/Javascript/20230608Alertbox/index.html
+++ b/Javascript/20230608Alertbox/index.html
@@ -17,7 +17,7 @@
   <div class="wrapper">
     <div id="alert" class="alert-box">
       <p>Alert</p>
-      <button id="close-btn" type="button">X</button>
+      <button onclick="clossAlert()" id="close-btn" type="button">X</button>
     </div>
     <button id="open-btn" type="button">Open</button>
   </div>
