--- a/20230609Lego반응형/index.html
+++ b/20230609Lego반응형/index.html
@@ -45,16 +45,18 @@
           <li class="gnb-item"><a href="">고객지원</a></li>
           <li class="gnb-item"><a href="">세일</a></li>
         </ul>
-        <div class="search se-hidden">
+        <div class="search">
           <i class="fa-solid fa-magnifying-glass"></i>
-          <input type="text" placeholder="스토어 검색">
+          <input class="se-hidden" type="text" placeholder="   스토어 검색">
         </div>
         <h2 class="user user-hidden">
           <a href=""><img src="./images/user.jpeg" alt="user"></a>
         </h2>
         <ul class="gnb-list2 gnb2-hidden">
-          <li class="gnb-item2"><a href="">장바구니</a></li>
-          <li class="gnb-item2"><a href="">로그아웃</a></li>
+          <li class="gnb-item2"><a href=""><i class="fa-solid fa-cart-shopping i-hidden"></i>
+            <span class="txt-hidden">장바구니</span></a></li>
+          <li class="gnb-item2"><a href=""><i class="fa-solid fa-arrow-right-from-bracket i-hidden"></i>
+            <span class="txt-hidden">로그아웃</span></a></li>
         </ul>
       </nav>
     </header>
