♻️ 클래스명의 중요성과 사이드바

--- a/20230609Lego반응형/index.html
+++ b/20230609Lego반응형/index.html
@@ -34,7 +34,7 @@
 
     <header>
       <nav>
-        <p><i class="fa-solid fa-bars"></i></p>
+        <p><i class="fa-solid fa-bars fai"></i></p>
         <h1 class="logo">
           <a href="./index.html"><img src="./images/logo.png" alt="logo"></a>
         </h1>
@@ -84,17 +84,17 @@
     <aside class="sidebar sm-only">
       <nav class="sidebar-nav"></nav>
       <h2 class="visually-hidden">사이드바 메뉴</h2>
-      <h2 class="user">
+      <h4 class="user2">
         <a href=""><img src="./images/user.jpeg" alt="user"></a>
-        너의 이름은
-      </h2>
+        너의이름은렛잇고…
+      </h4>
       <hr>
       <div class="side-big-menu-list">
         <i class="fa-solid fa-cart-shopping"></i>
-        <p>레고 제품 쇼핑</p>
-        <i class="fa-solid fa-chevron-down"></i>
+        <span>레고 제품 쇼핑</span>
+        <i class="fa-solid fa-chevron-down drawer-opener"></i>
       </div>
-      <ul class="side-menu-list">
+      <ul class="side-menu-list drawer">
         <li class="side-menu-item"><a href="">시리즈별 세트</a></li>
         <li class="side-menu-item"><a href="">연령별</a></li>
         <li class="side-menu-item"><a href="">가격별</a></li>
@@ -107,10 +107,10 @@
       <hr>
       <div class="side-big-menu-list">
         <i class="fa-regular fa-face-smile"></i>
-        <p>레고 브랜드 소개</p>
-        <i class="fa-solid fa-chevron-down"></i>
+        <span>레고 브랜드 소개</span>
+        <i class="fa-solid fa-chevron-down drawer-opener"></i>
       </div>
-      <ul class="side-menu-list">
+      <ul class="side-menu-list drawer">
         <li class="side-menu-item"><a href="">기업가치</a></li>
         <li class="side-menu-item"><a href="">레고 앱</a></li>
         <li class="side-menu-item"><a href="">레고 매거진</a></li>
@@ -121,10 +121,10 @@
       <hr>
       <div class="side-big-menu-list">
         <i class="fa-solid fa-circle-info"></i>
-        <p>고객 지원</p>
-        <i class="fa-solid fa-chevron-down"></i>
+        <span>고객 지원</span>
+        <i class="fa-solid fa-chevron-down drawer-opener"></i>
       </div>
-      <ul class="side-menu-list">
+      <ul class="side-menu-list drawer">
         <li class="side-menu-item"><a href="">주문 현황 확인</a></li>
         <li class="side-menu-item"><a href="">배송 및 반품</a></li>
         <li class="side-menu-item"><a href="">스토어 검색</a></li>
